samples/_failures_safe/1761441701_fcc57d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b7316c8.c: In function ‘main’:
./samples/SAFE/__tmp_2b7316c8.c:122:13: error: expected expression at end of input
  122 |             printf("%s %s %s\n",
      |             ^~~~~~
./samples/SAFE/__tmp_2b7316c8.c:122:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b7316c8.c:122:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b7316c8.c:122:13: error: expected declaration or statement at end of input
